--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -3,9 +3,9 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-        <link type = "text/css" rel = "stylesheet" href="exp10.css">
+        <link type = "text/css" rel = "stylesheet" href="new.css">
         <script  src = "ui.js"> </script>
-        <script type="text/javascript" src = "exp10.js"> </script>
+        <script type="text/javascript" src = "new.js"> </script>
         <script  src = "velocity.js"></script>
         <title> Experiment-10 </title>
     </head>
