--- a/expt6/exp6.html
+++ b/expt6/exp6.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+        <script src = "ui.js"> </script>
+        <script src = "velocity.js"> </script>
         <link rel="stylesheet" type="text/css" href="exp6.css">
         <script type="text/javascript" src="exp6.js"></script>
         <title> Instrumentation and working principles of Infra Red spectroscopy using salt plates </title>
@@ -28,7 +30,7 @@
         <img id = "bigchain" src = "shapes/111.png">
         <img id = "cap" src = "shapes/114.png">
         <img id = "strtbtn" src = "buttons/DefineButton2_50/1.png">
-        <img id = "evltbtn" src = "buttons/DefineButton2_148/1.png">
+        <img id = "evltbtn" src = "buttons/DefineButton2_148/1.png" >
         <img id = "exp" src = "sprites/DefineSprite_20/2.png">
         <img id = "graph" src = "shapes/127.png">
         <img id = "spoonfill" src = "fillspoon.gif">
@@ -46,6 +48,7 @@
         <img id = "green3" src = "green2.gif">
         <img id = "red2" src = "redslide.png">
         <img id = "red3" src = "red2.gif">
+        <img id = "drop" src = "1.png">
         <div id = "hrline1"> </div>
         </div>
     </body>
