--- a/expt8/new.html
+++ b/expt8/new.html
@@ -4,20 +4,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="./exp8.css">
-        <script type="text/javascript" src="./exp8.js"></script>
+        <link rel="stylesheet" type="text/css" href="new.css">
+        <script type="text/javascript" src="new.js"></script>
         <script type = "text/javascript" src = "./ui.js"></script>
         <script type = "text/javascript" src = "./velocity.js"></script>
         <title> Experiment8 </title>
         </head>
         <body>
-            <div id = "container" onload = "init()" >
-            <img id = "load" src = "images/101.png" >
-            <img id = "ionisation" src = "images/101.png" onclick="loadSample()">
+            <div id = "cantainer">
+            <img id = "load" src = "images/101.png" onclick = "loadSample()" >
+            <div id = "loadtxt" onclick="loadSample()" > Load <br> Sample </div>
+            <img id = "ionisation" src = "images/101.png">
             <img id = "acceleration" src = "images/101.png">
             <img id = "deflection" src = "images/101.png">
             <img id = "evaluation" src = "images/101.png">
-            <div id = "loadtxt" onclick="loadSample()" > Load <br> Sample </div>
             <div id = "ionisationtxt" > ionisation </div>
             <div id = "accelerationtxt"> acceleration </div>
             <div id = "deflectiontxt" > deflection </div>
@@ -36,6 +36,16 @@
             <img id = "irplate1" src = "images/126.png">
             <div id = "N"> N </div>
             <div id = "S" > S </div>
+            <img id = "innerinstr" src = "images/110.png">
+            <div id = "innerinstrtxt">The sample is introduced into the vaporisation chamber which is instantly vapourised due to high vacuum and heat. </div>
+            <img id = "temp2" src = "last.gif">
+            <img id = "rainbow" src = "images/78.png">
+            <img id = "box1" src = "images/153.png">
+            <img id = "box" src = "images/118.png">
+            <img id = "arrow" src = "images/120.png">
+            <img id = "arrow1" src = "images/120.png">
+            <img id = "arrow2" src = "images/123.png">
+            <img id = "ylwdrop" src = "images/147.png">
             <img id = "ylwdrop1" src = "images/147.png">
             <img id = "ylwdrop2" src = "images/147.png">
             <img id = "ylwdrop3" src = "images/147.png">
@@ -50,17 +60,13 @@
             <img id = "ion6" src = "images/141.png">
             <img id = "ion7" src = "images/141.png">
             <img id = "ion8" src = "images/141.png">
-            <img id = "temp2" src = "last.gif">
-            <img id = "rainbow" src = "images/78.png">
-            <img id = "box1" src = "images/153.png">
-            <img id = "box" src = "images/118.png">
-            <img id = "arrow" src = "images/120.png">
-            <img id = "arrow1" src = "images/120.png">
-            <img id = "arrow2" src = "images/123.png">
-            <img id = "innerinstr" src = "images/110.png">
-            <div id = "innerinstrtxt">The sample is introduced into the vaporisation chamber which is instantly vapourised due to high vacuum and heat. </div>
-           
-           
+            <img id = "negdrop1" src = "images/negativedrop.png">
+            <img id = "negdrop2" src = "images/negativedrop.png">
+            <img id = "negdrop3" src = "images/negativedrop.png">
+            <img id = "negdrop4" src = "images/negativedrop.png">
+            <img id = "negdrop5" src = "images/negativedrop.png">
+            <img id = "negdrop6" src = "images/negativedrop.png">
+            <img id = "negdrop7" src = "images/negativedrop.png">
+            <img id = "negdrop8" src = "images/negativedrop.png">
             </div>
         </body>
-    </html>
