--- a/expt7/exp7.html
+++ b/expt7/exp7.html
@@ -43,6 +43,7 @@
             <img id = "graph" src = "sprites/DefineSprite_58_IR_Sol_exp7_fla.graph_aspirine_12/1.png">
             <img id = "spectrometer" src = "shapes/33.png">
             <img id = "chain" src = "shapes/34.png">
+            <img id = "stand" src = "shapes/49.png">
             <img id = "bigchain" src = "shapes/36.png">
             <img id = "cap" src = "shapes/39.png">
             <img id = "strtbtn" src = "buttons/DefineButton2_27/1.png">
@@ -50,6 +51,11 @@
             <img id = "sirinj2" src = "sirinj2.png">
             <img id = "empty" src = "empty.gif">
             <img id = "mirror" src = "mirror.gif">
+            <img id = "beamsplitter" src = "beamsplitter.png">
+            <img id = "fixedmirror" src = "fixedmirror.png">
+            <img id = "movablemirror" src = "movablemirror.png">
+            <div id = "uppersupport"> <hr> </div>
+            <div id = "lowersupport"> <hr> </div>
             <img id = "machine" src = "last1.gif">
         </div>
     </body>
