some more issues resolved

--- a/expt6/exp6.html
+++ b/expt6/exp6.html
@@ -15,9 +15,9 @@
         <hr item-width="500">
         <div id = "verticalline" > </div>
         <img id = "aspirin" src ="shapes/53.png" onclick="removeBtn1()">
-        <div id = "asprntxt" > Aspirine </div>
+        <div id = "asprntxt" onclick="removeBtn1()" > Aspirine </div>
         <img id = "cafine" src = "shapes/56.png" onclick="removeBtn2()">
-        <div id = "cafintxt" > Caffeine </div>
+        <div id = "cafintxt" onclick="removeBtn2()" > Caffeine </div>
         <img id = "sampl" src = 'sprites/DefineSprite_62/1.png'>
         <div id = "sampltxt"> Sampl </div>
         <img id = "nizol" src = "sprites/DefineSprite_71/1.png">
@@ -41,14 +41,15 @@
         <img id = "fill" src = "shapes/93.png">
         <img id = "spoonfill2" src = "fillspoon.gif">
         <img id = "emptyspoon2" src = "emptyspoon.gif">
-        <img id = "green1" src = "binaryData/green1.gif">
+        <img id = "green1" src = "sprites/DefineSprite_43_IR_Powder_exp6_fla.top_scene_3/101.png" >
         <img id = "machine" src = "binaryData/last1.gif">
-        <div id = "instr">  Select any Sample  </div> 
-        <img id = "green2" src = "greenslide.png">
-        <img id = "green3" src = "green2.gif">
+        <div id = "instr">  Select any Sample  </div>
         <img id = "red2" src = "redslide.png">
-        <img id = "red3" src = "red2.gif">
+        <img id = "red3" src = "sprites/DefineSprite_43_IR_Powder_exp6_fla.top_scene_3/165.png">
         <img id = "drop" src = "1.png">
+        <img id = "beamsplitter" src = "beamsplitter.png">
+        <img id = "fixedmirror" src = "fixedmirror.png">
+        <img id = "movablemirror" src = "movablemirror.png">
         <div id = "hrline1"> </div>
         </div>
     </body>
