--- a/expt7/exp7.html
+++ b/expt7/exp7.html
@@ -19,8 +19,9 @@
             <div id = "samplbtltxt" > Sample Bottol</div>
             <img id = "sampl" src = "shapes/76.png">
             <div id ="sampltxt"> Sample </div>
-            <img id = "yellow" src = "sprites/DefineSprite_91/1.png">
+            <img id = "yellow" src = "shapes/89.png">
             <img id = "solvent" src = "shapes/82.png">
+            <img id = "fullbottle" src = "shapes/fullbottle.png">
             <div id = "solventtxt"> Solvent </div>
             <img id = "fillsolution" src = "fill1.gif">
             <img id = "fullsolution" src = "shapes/94.png">
