--- a/expt8/exp.html
+++ b/expt8/exp.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="new.css">
-        <script type="text/javascript" src="new.js"></script>
+        <link rel="stylesheet" type="text/css" href="exp.css">
+        <script type="text/javascript" src="exp.js"></script>
         <script type = "text/javascript" src = "./ui.js"></script>
         <script type = "text/javascript" src = "./velocity.js"></script>
         <title> Experiment8 </title>
@@ -68,5 +68,7 @@
             <img id = "negdrop6" src = "images/negativedrop.png">
             <img id = "negdrop7" src = "images/negativedrop.png">
             <img id = "negdrop8" src = "images/negativedrop.png">
+            <img id = "emptypipe" src = "images/78.png">
+            <img id = "lines" src = "line.png">
             </div>
         </body>
