unnecessary files removed

--- a/exp6_10/expt.html
+++ b/exp6_10/expt.html
@@ -40,18 +40,8 @@
             <img id = "syringe2" src = "emptysirinj.gif">
             <img id = "green1" src = "green1.gif">
             <div class = "col2">
-            <img id = "pipe1" src = "shapes/pipe.png">
-            <img id = "round1" src = "shapes/76.png">
-            <img id = "round2" src = "shapes/76.png">
-            <img id = "round3" src = "shapes/76.png">
-            <img id = "irplate" src = "shapes/70.png">
-            <img id = "spring" src = "shapes/77.png">
-            <img id = "north" src = "shapes/71.png">
-            <img id = "south" src = "shapes/71.png">
             <img id = "greennew" src = "binaryData/0.png">
             <img id = "greennew1" src = "greennew.gif">
-            <div id = "N"> N </div>
-            <div id = "S" > S </div>
             <img id = "ylwdrop1" src = "shapes/147.png">
             <img id = "ylwdrop2" src = "shapes/147.png">
             <img id = "ylwdrop3" src = "shapes/147.png">
@@ -77,6 +67,7 @@
             <img id = "arrow1" src = "shapes/120.png">
             <img id = "arrow2" src = "shapes/123.png">
             <img id = "innerinstr" src = "shapes/110.png">
+            <img id = "chamber" src = "chamber.png">
             <div id = "innerinstrtxt">The sample is introduced into the vaporisation chamber which is instantly vapourised due to high vacuum and heat. </div>
             </div>
         </body>
