--- a/expt8/exp.html
+++ b/expt8/exp.html
@@ -27,7 +27,7 @@
             <img id = "round2" src = "images/76.png">
             <img id = "round3" src = "images/76.png">
             <img id = "irplate" src = "images/70.png">
-            <img id = "spring" src = "images/77.png">
+            <img id = "spring" src = "images/spring.png">
             <img id = "north" src = "images/71.png">
             <img id = "south" src = "images/71.png">
             <img id = "syringe" src = "images/128.png">
