some more issues resolved

--- a/exp6_10/expt.html
+++ b/exp6_10/expt.html
@@ -22,9 +22,12 @@
             <div id = "nitrotxt" onclick="vanish2()" > 2-Nitrophenol </div>
             <img id = "samplsol" src = "shapes/3.png">
             <div id = "samplsoltxt"> Sample </div>
+            <div id = "row1_col2">
             <img id = "solvent" src = "shapes/19.png">
             <img id = "solvent1" src = "shapes/19.png">
             <div id = "solventtxt"> Solvent </div>
+            <img id = "blue1" src = "blue/blue12.gif">
+            </div>
             <img id = "sample" src = "shapes/empty.png">
             <img id = "sample2" src = "fullbeaker.gif">
             <div id = "sampletxt"> Sample Bottle</div>
@@ -32,7 +35,6 @@
             <div id = "spectrotxt"> Mass Spectrometer</div>
             <img id = "evaluate" src = "shapes/2.png" >
             <div id = "evlttxt"> Evaluate </div>
-            <img id = "blue1" src = "blue/blue12.gif">
             <img id = "spoon1" src = "fillspoon.gif">
             <img id = "spoon2" src = "emptyspoon.gif">
             <img id = "fill" src = "shapes/21.png">
@@ -66,9 +68,11 @@
             <img id = "arrow" src = "shapes/120.png">
             <img id = "arrow1" src = "shapes/120.png">
             <img id = "arrow2" src = "shapes/123.png">
-            <img id = "innerinstr" src = "shapes/110.png">
             <img id = "chamber" src = "chamber.png">
+            <div id = "txt">
+            <img id = "innerinstr" src = "shapes/110.png">
             <div id = "innerinstrtxt">The sample is introduced into the vaporisation chamber which is instantly vapourised due to high vacuum and heat. </div>
+            </div>
             </div>
         </body>
     </html>
