--- a/expt7/exp7.html
+++ b/expt7/exp7.html
@@ -16,16 +16,16 @@
             <img id = "redbtn" src = "shapes/72.png" onclick="vanish2()">
             <div id = "redtxt" onclick="vanish2()"> 2-nitrophynol</div>
             <img id = "samplbotl" src = "shapes/78.png">
-            <div id = "samplbtltxt" > Sample Bottol</div>
+            <div id = "samplbtltxt" > Sample Bottle</div>
             <img id = "sampl" src = "shapes/76.png">
             <div id ="sampltxt"> Sample </div>
             <img id = "yellow" src = "shapes/89.png">
             <img id = "solvent" src = "shapes/82.png">
-            <img id = "fullbottle" src = "shapes/fullbottle.png">
             <div id = "solventtxt"> Solvent </div>
             <img id = "fillsolution" src = "fill1.gif">
             <img id = "fullsolution" src = "shapes/94.png">
             <img id = "desicator" src = "shapes/80.png">
+            <img id = "desicatorbtn" src = "shapes/desicatorbtn.png">
             <div id = "desicatortxt"> Desiccator/IR-Cell </div>
             <img id = "slide" src = "shapes/92.png">
             <div id ="hrline1"> </div>
