comments added for all experiments

--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -24,9 +24,9 @@
             <img id = "exp1" src = "shapes/2.png" onclick="moveToIr()" >
             <img id = "exp2" src = "shapes/2.png" onclick="moveToMass()" >
             <img id = "exp3" src = "shapes/2.png" onclick="moveToNmr()" >
-            <div id = "exp1txt" > IR Solution </div>
-            <div id = "exp2txt" > Mass Spec. </div>
-            <div id = "exp3txt" > NMR. </div>
+            <div id = "exp1txt" onclick="moveToIr()" > IR Solution </div>
+            <div id = "exp2txt" onclick="moveToMass()" > Mass Spec. </div>
+            <div id = "exp3txt" onclick="moveToNmr()" > NMR. </div>
         </div>
 
             <!-- From here all divs and tags are for IR solution Experiment  -->
