fixed issues in 1,2,4 experiments

--- a/expt6/exp6.html
+++ b/expt6/exp6.html
@@ -17,8 +17,8 @@
         <div id = "asprntxt" onclick="removeBtn1()" > Aspirine </div>
         <img id = "cafine" src = "Images/cafine.png" onclick="removeBtn2()">
         <div id = "cafintxt" onclick="removeBtn2()" > Caffeine </div>
-        <img id = "sampl" src = 'Images/sprites/DefineSprite_62/1.png'>
-        <div id = "sampltxt"> Sampl </div>
+        <img id = "sample" src = 'Images/sprites/DefineSprite_62/1.png'>
+        <div id = "sampletxt"> Sample </div>
         <img id = "nizol" src = "Images/sprites/DefineSprite_71/1.png">
         <div id = "nizoltxt"> Nizol </div>
         <img id = "mortar" src = "Images/sprites/DefineSprite_82/1.png">
@@ -42,7 +42,7 @@
         <img id = "emptyspoon2" src = "Images/emptyspoon.gif">
         <img id = "green1" src = "Images/sprites/DefineSprite_43_IR_Powder_exp6_fla.top_scene_3/101.png" >
         <img id = "machine" src = "Images/spectrometer.gif">
-        <div id = "instr">  Select any Sample  </div>
+        <div id = "instr"> <i> Select any Sample </I> </div>
         <img id = "red2" src = "Images/redslide.png">
         <img id = "red3" src = "Images/sprites/DefineSprite_43_IR_Powder_exp6_fla.top_scene_3/165.png">
         <img id = "drop" src = "Images/drops.png">
