--- a/expt7/exp7.html
+++ b/expt7/exp7.html
@@ -22,7 +22,7 @@
             <img id = "yellow" src = "Images/yellow.png">
             <img id = "solvent" src = "Images/solvent.png">
             <div id = "solventtxt"> Solvent </div>
-            <img id = "fillsolution" src = "Images/fill1.gif">
+              <!-- <img id = "fillsolution" src = "Images/fill1.gif"> -->
             <img id = "fullsolution" src = "Images/fullsolution.png">
             <img id = "desicator" src = "Images/desicator.png">
             <img id = "desicatorbtn" src = "Images/desicatorbtn.png">
