--- a/exp5/nuclear_mass_exp5.html
+++ b/exp5/nuclear_mass_exp5.html
@@ -33,7 +33,7 @@
         <img id="ring" src="images/ring.gif">
         <img id="s-pole" src="images/s_pole.png">
         <img id="n-pole" src="images/n_pole.png">
-        <img id="molecules" src="images/molecules.gif">
+        <img id="molecules" src="images/molecules1.gif">
         <img id="evaluate"  src="images/evaluate.png"  >
         <img id="benzene-graph" src="images/benzene_graph.gif">
         <img id="acetaldehyde-graph" src="images/acetaldehyde_graph.gif">
