--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+        <script 
+            src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js">
+        </script>
         <link type = "text/css" rel = "stylesheet" href="exp10.css">
+        <script  src = "velocity.js"></script>
         <script  src = "ui.js"> </script>
         <script type="text/javascript" src = "exp10.js"> </script>
-        <script  src = "velocity.js"></script>
         <title> Experiment-10 </title>
     </head>
     <body>
@@ -151,7 +153,7 @@
 		<img id="NMRs-pole" src="exp5/images/s_pole.png">
         <img id="NMRn-pole" src="exp5/images/n_pole.png">
 		<img id="NMRring" src="exp5/images/ring.gif">
-		<img id="NMRmolecules" src="exp5/images/molecules.gif">
+		<img id="NMRmolecules" src="exp5/images/molecules1.gif">
 		<img id="NMRevaluate"  src="exp5/images/evaluate.png"  >
         <img id="NMRgobackbtn" src = "exp5/images/gobackbtn.png" onclick="window.location.reload()" >
         <div id="NMRgobacktxt" onclick="window.location.reload()" > go back to <br> perform <br> another <br> experiment </div> 
