--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -68,8 +68,8 @@
             <img id = "IRfixedmirror" src = "exp6/Images/fixedmirror.png">
             <img id = "IRdrop" src = "exp6/Images/drops.png">
             <img id = "IRmovablemirror" src = "exp6/Images/movablemirror.png">
-            <img id = "IRgobackbtn" src = "exp6/Images/gobackbtn.png" onclick="window.location.reload()" >
-            <div id = "IRgobacktxt" onclick="window.location.reload()" > go back to <br> perform <br> another <br> experiment </div> 
+            <img id = "IRgobackbtn" src = "Images/btn2.png" onclick="window.location.reload()" >
+            <!-- <div id = "IRgobacktxt" onclick="window.location.reload()" > go back to <br> perform <br> another <br> experiment </div> --> 
             </div>
 
             <!-- All tags/divs ends here for IR solution -->
