--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -60,6 +60,7 @@
             <img id = "IRemptyspoon2" src = "exp6/Images/emptyspoon.gif">
             <img id = "IRgreen1" src = "exp6/Images/sprites/DefineSprite_43_IR_Powder_exp6_fla.top_scene_3/101.png">
             <img id = "IRmachine" src = "exp6/Images/spectrometer.gif">
+            <img id = "IRmachine1" src = "exp6/Images/spectrometer.png">
             <div id = "IRinstr">  click on the sample bottle to transffer a small quantity of the sample to the mortar.  </div> 
             <img id = "IRred2" src = "exp6/Images/redslide.png">
             <img id = "IRred3" src = "exp6/Images/sprites/DefineSprite_43_IR_Powder_exp6_fla.top_scene_3/165.png">
