--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -47,7 +47,8 @@
             <img id = "IRbigchain" src = "exp6/Images/bigchain.png">
             <img id = "IRcap" src = "exp6/Images/cap.png">
             <img id = "IRstrtbtn" src = "exp6/Images/startbtn.png">
-            <img id = "IRevltbtn" src = "exp6/Images/evaluatebtn.png">
+            <img id = "IRevltbtn" src = "exp6/Images/evaluatebtn.png" 
+                onclick="IRurlChange()">
             <img id = "IRexp" src = "exp6/Images/sprites/DefineSprite_20/2.png">
             <img id = "IRgraph" src = "exp6/Images/graph.png">
             <img id = "IRspoonfill" src = "exp6/Images/fillspoon.gif">
