--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -96,8 +96,9 @@
             <div id = "MSsampletxt"> Sample Bottle</div>
             <img id = "MSspectro" src = "exp6_10/Images/spectro.png">
             <div id = "MSspectrotxt"> Mass Spectrometer</div>
-            <img id = "MSevaluate" src = "exp6_10/Images/evaluate.png" >
-            <div id = "MSevlttxt"> Evaluate </div>
+            <img id = "MSevaluate" src = "exp6_10/Images/evaluate.png" 
+                onclick="MSurlChange()" >
+            <div id = "MSevlttxt" onclick="MSurlChange()"> Evaluate </div>
             <img id = "MSspoon1" src = "exp6_10/Images/fillspoon.gif">
             <img id = "MSspoon2" src = "exp6_10/Images/emptyspoon.gif">
             <img id = "MSfill" src = "exp6_10/Images/fill.png">
