--- a/exp5/nuclear_mass_exp5.html
+++ b/exp5/nuclear_mass_exp5.html
@@ -30,7 +30,7 @@
         <img id="red-injector" src="images/red-injector.png">
         <img id="blue-injector" src="images/blue-injector.png">
         <img id="green-injector" src="images/green-injector.png">
-        <img id="ring" src="images/ring.gif">
+        <img id="ring" src="images/ring1.gif">
         <img id="s-pole" src="images/s_pole.png">
         <img id="n-pole" src="images/n_pole.png">
         <img id="molecules" src="images/molecules1.gif">
