--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -155,7 +155,7 @@
         <img id="NMRconstant-molecules" src="exp5/images/constant_molecules.png">
 		<img id="NMRs-pole" src="exp5/images/s_pole.png">
         <img id="NMRn-pole" src="exp5/images/n_pole.png">
-		<img id="NMRring" src="exp5/images/ring.gif">
+		<img id="NMRring" src="exp5/images/ring1.gif">
 		<img id="NMRmolecules" src="exp5/images/molecules1.gif">
 		<img id="NMRevaluate"  src="exp5/images/evaluate.png"  >
         <img id="NMRgobackbtn" src = "exp5/images/gobackbtn.png" onclick="window.location.reload()" >
