--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -157,7 +157,7 @@
         <img id="NMRn-pole" src="exp5/images/n_pole.png">
 		<img id="NMRring" src="exp5/images/ring1.gif">
 		<img id="NMRmolecules" src="exp5/images/molecules1.gif">
-		<img id="NMRevaluate"  src="exp5/images/evaluate.png"  >
+		<img id="NMRevaluate"  src="exp5/images/evaluate.png" onclick="NMRurlchange()">
         <img id="NMRgobackbtn" src = "exp5/images/gobackbtn.png" onclick="window.location.reload()" >
         <div id="NMRgobacktxt" onclick="window.location.reload()" > go back to <br> perform <br> another <br> experiment </div> 
         <img id="NMRbenzene-graph" src="exp5/images/benzene_graph.gif">
