Issues #73, #83 and #76 fixed

--- a/expt10/exp10.html
+++ b/expt10/exp10.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -160,8 +160,11 @@
 		<img id="NMRevaluate"  src="exp5/images/evaluate.png" onclick="NMRurlchange()">
         <img id="NMRgobackbtn" src = "exp5/images/gobackbtn.png" onclick="window.location.reload()" >
         <div id="NMRgobacktxt" onclick="window.location.reload()" > go back to <br> perform <br> another <br> experiment </div> 
-        <img id="NMRbenzene-graph" src="exp5/images/benzene_graph.gif">
-		<img id="NMRgraph" src="exp5/images/graph.png">
+        <img id="NMRbenzene-graph" src="Images/graph1.gif">
+        <img id="NMRbenzene-graph2" src="Images/graph2.gif">
+        <img id="NMRgraph" src="exp5/images/graph.png">
+        <img id="NMRfinalGraph" src="Images/final_graph.png">
+		<img id="NMRfinalGraph2" src="Images/final_graph2.png">
 		<img id="NMRvertical-arrows" src="exp5/images/vertical_arrows.png">
         <img id="NMRbelow-arrow" src="exp5/images/below_arrow.png">
         <img id="NMRup-arrow" src="exp5/images/up_arrow.png">
