--- a/exp5/nuclear_mass_exp5.html
+++ b/exp5/nuclear_mass_exp5.html
@@ -9,8 +9,8 @@
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     	<link rel="stylesheet" type="text/css" href="nuclear_mass_exp5.css">	
-        <!-- <script type="text/javascript" src="nuclear_mass_exp5.js"></script> -->
-        <script type="text/javascript" src ="animation.js"></script>
+        <script type="text/javascript" src="nuclear_mass_exp5.js"></script>
+        <!-- <script type="text/javascript" src ="animation.js"></script> -->
     
 </head>
 
