--- a/exp8/simulation/mass_spec_exp8.html
+++ b/exp8/simulation/mass_spec_exp8.html
@@ -1,71 +1,75 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Mass_Spec_exp8</title>
-	<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    	<link rel="stylesheet" type="text/css" href="mass_spec_exp8.css">	
-    	<script type="text/javascript" src ="mass_spec_exp8.js"></script>
-    	<script type="text/javascript" src ="animation.js"></script>
-    	
-
-</head>
-<body>
-
-	<div id="container" >
-		<img id="load" src="images/load.png" ">
-		<img id="ionisation" src="images/ionisation.png" onclick="">
-		<img id="acceleration" src="images/acceleration.png">
-		<img id="deflection" src="images/deflection.png" ">
-		<img id="evaluation" src="images/evaluation.png" >
-		<img id="syringe" src="images/syringe.png">
-		<img id="tube" src="images/tube.png">
-		<img id="box" src="images/box.png">
-	</div>
-	<div id ="poles">
-		<img id="northpole" src="images/northpole.png">
-		<img id="southpole" src="images/southpole.png">
-		<img id="molecule" src="images/molecule.png">
-		<img id="circle" src="images/blue_circle.gif">
-		<img id="curve" src="images/curve.png">
-		<img id="electrode" src="images/electrode.gif" >
-		<img id="arrow" src="images/arrow.gif">
-		<img id="arrow-2" src="images/arrow_2.gif">
-		<img id="square" src="images/square.png">
-		<img id="square-2" src="images/square_2.png">
-		<img id="color-lines" src="images/color_lines.gif">
-	</div>
-	
-	<div>
-		<img id="moving-molecules-1" src="images/moving_molecules_1.png">
-		<img id="moving-molecules-2" src="images/moving_molecules_2.png">
-		<img id="moving-molecules-3" src="images/moving_molecules_3.png">
-		<img id="moving-molecules-4" src="images/moving_molecules_4.png">
-		<img id="moving-molecules-5" src="images/moving_molecules_5.png">
-		<img id="moving-molecules-6" src="images/moving_molecules_6.png">
-		<img id="moving-molecules-7" src="images/moving_molecules_7.png">
-		<img id="moving-molecules-8" src="images/moving_molecules_8.png">
-		<img id="moving-molecules-9" src="images/moving_molecules_9.png">
-
-	</div>
-	
-	<div id="instruction_steps">
-		<img id="step1" src="images/step_1.png">
-		<img id="step2" src="images/step_2.png">
-		<img id="step3" src="images/step_3.png">
-		<img id="step4" src="images/step_4.png">
-		
-	</div>
-	
-			<div id="graph"> </div>
-			<div id="demo"></div>
-
-			 
-</body>
-</html>
-
-
-
-
+    <html>
+        <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js">
+        </script>
+        <link rel="stylesheet" type="text/css" href="mass_spec_exp8.css">
+        <script type="text/javascript" src="animation.js"></script>
+        <script type = "text/javascript" src = "./velocity.js"></script>
+        <script type = "text/javascript" src = "./ui.js"></script>
+        <title> Experiment8 </title>
+        </head>
+        <body>
+            <div id = "cantainer">
+            <img id = "load" src = "images/101.png" onclick = "loadSample()" >
+            <div id = "loadtxt" onclick="loadSample()" > Load <br> Sample </div>
+            <img id = "ionisation" src = "images/101.png">
+            <img id = "acceleration" src = "images/101.png">
+            <img id = "deflection" src = "images/101.png">
+            <img id = "evaluation" src = "images/101.png">
+            <div id = "ionisationtxt" > Ionisation </div>
+            <div id = "accelerationtxt"> Acceleration </div>
+            <div id = "deflectiontxt" > Deflection </div>
+            <div id = "evaluationtxt" > Evaluation </div>
+            <img id = "pipe1" src = "images/pipe.png">
+            <img id = "round1" src = "images/76.png">
+            <img id = "round2" src = "images/76.png">
+            <img id = "round3" src = "images/76.png">
+            <img id = "irplate" src = "images/70.png">
+            <img id = "spring" src = "images/spring.png">
+            <img id = "north" src = "images/71.png">
+            <img id = "south" src = "images/71.png">
+            <img id = "syringe" src = "images/128.png">
+            <img id = "greennew" src = "images/127.png">
+            <img id = "spring1" src = "images/133.png">
+            <img id = "irplate1" src = "images/126.png">
+            <div id = "N"> N </div>
+            <div id = "S" > S </div>
+            <img id = "innerinstr" src = "images/110.png">
+            <div id = "innerinstrtxt">The sample is introduced into the vaporisation chamber which is instantly vapourised due to high vacuum and heat. </div>
+            <img id = "temp2" src = "last.gif">
+            <img id = "rainbow" src = "images/78.png">
+            <img id = "box1" src = "images/153.png">
+            <img id = "box" src = "images/118.png">
+            <img id = "arrow" src = "images/120.png">
+            <img id = "arrow1" src = "images/120.png">
+            <img id = "arrow2" src = "images/123.png">
+            <img id = "ylwdrop" src = "images/147.png">
+            <img id = "ylwdrop1" src = "images/147.png">
+            <img id = "ylwdrop2" src = "images/147.png">
+            <img id = "ylwdrop3" src = "images/147.png">
+            <img id = "ylwdrop4" src = "images/147.png">
+            <img id = "ylwdrop5" src = "images/147.png">
+            <img id = "temp1" src = "images/136.png">
+            <img id = "ion1" src = "images/141.png">
+            <img id = "ion2" src = "images/141.png">
+            <img id = "ion3" src = "images/141.png">
+            <img id = "ion4" src = "images/141.png">
+            <img id = "ion5" src = "images/141.png">
+            <img id = "ion6" src = "images/141.png">
+            <img id = "ion7" src = "images/141.png">
+            <img id = "ion8" src = "images/141.png">
+            <img id = "negdrop1" src = "images/negativedrop.png">
+            <img id = "negdrop2" src = "images/negativedrop.png">
+            <img id = "negdrop3" src = "images/negativedrop.png">
+            <img id = "negdrop4" src = "images/negativedrop.png">
+            <img id = "negdrop5" src = "images/negativedrop.png">
+            <img id = "negdrop6" src = "images/negativedrop.png">
+            <img id = "negdrop7" src = "images/negativedrop.png">
+            <img id = "negdrop8" src = "images/negativedrop.png">
+            <img id = "emptypipe" src = "images/78.png">
+            <img id = "lines" src = "line.png">
+            </div>
+        </body>
