--- a/exp6_10/expt.html
+++ b/exp6_10/expt.html
@@ -3,7 +3,8 @@
         <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js">
+        </script>
         <link rel="stylesheet" type="text/css" href="expt.css">
         <script type="text/javascript" src="expt.js"></script>
         <script type = "text/javascript" src = "ui.js"></script>
